--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.376.0",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "prisma": "^5.13.0",
     "react": "^18",
