--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "prisma": "^5.13.0",
+    "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.2.5",
