--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.376.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
+    "openai": "^4.38.5",
     "prisma": "^5.13.0",
     "radix-ui": "^1.0.1",
     "react": "^18",
