--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
+    "vaul": "^0.9.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
